tests/negative/Package/PackageJuvixPackageSymbolWrongType1/Package.juvix
module Package;

import Stdlib.Prelude open;
import PackageDescription.V1 open;

package : Nat := 1;
